[project]
name = "iicu_activity_journal"
version = "0.5.0"
authors = [
  { name="yokuha", email="jokuha@icloud.com" },
]
description = "Creating logbooks from intervals.icu data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click",
  "datetime",
  "mdutils",
  "requests",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3 License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/yokuha/activity-journal"
issues = "https://github.com/yokuha/activity-journal/issues"

[project.scripts]
iicu-activity-journal-create = "iicu_activity_journal.create:main"
iicu-activity-journal-update-data = "iicu_activity_journal.update_data:main"
iicu-activity-journal-balance = "iicu_activity_journal.balance:main"
iicu-activity-journal-duplicates = "iicu_activity_journal.duplicates:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
iicu_activity_journal = ["pandoc.yaml"]
